--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^5.1.3",
     "express": "^4.17.1",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
     "style-loader": "^2.0.0"
   }
 }
